# zircon

./: .gitignore  BUILD.gn  Makefile  README.md  legacy_image_x64.txt  targets.txt  temp.txt  tmep.txt
bootloader/src/: osboot.c
buildtools/: exec_tool.sh  vars.sh
buildtools/linux-x64/: gn  ninja
buildtools/mac-x64/: gn
kernel/: BUILD.gn  params.gni
kernel/arch/x86/: idt.cc  image.S  start.S
kernel/arch/x86/include/arch/x86/: mp.h
kernel/dev/uart/mini_uart/: BUILD.gn  uart.cc
kernel/include/: debug.h
kernel/include/kernel/: percpu.h
kernel/include/lk/: init.h
kernel/kernel/: event.cc  percpu.cc  thread.cc
kernel/lib/console/: console.cc
kernel/lib/memory_limit/: memory_limit.cc
kernel/lib/userabi/: BUILD.gn  userboot.cc
kernel/lib/userabi/userboot/: start.cc
kernel/lib/version/: BUILD.gn
kernel/object/: channel_dispatcher.cc  job_dispatcher.cc
kernel/object/include/object/: channel_dispatcher.h  dispatcher.h  message_packet.h
kernel/platform/generic-arm/: BUILD.gn  platform.cc
kernel/platform/pc/: platform.cc
kernel/syscalls/: BUILD.gn  object_wait.cc
kernel/top/: init.cc  main.cc
kernel/vm/: bootalloc.cc  bootreserve.cc  pmm_node.cc  vm_aspace.cc
prebuilt/: config.gni
prebuilt/sysroot/linux-arm64/lib/: ld-linux-aarch64.so.1
prebuilt/sysroot/linux-arm64/lib/aarch64-linux-gnu/: libgcc_s.so.1
prebuilt/sysroot/linux-arm64/usr/include/: argp.h  elf.h  fcntl.h
prebuilt/sysroot/linux-arm64/usr/include/X11/: Xpoll.h
prebuilt/sysroot/linux-arm64/usr/include/asm-generic/: unistd.h
prebuilt/sysroot/linux-arm64/usr/include/linux/: audit.h  aufs_type.h  kvm.h  tipc_config.h  version.h  (+1 more)
prebuilt/sysroot/linux-x64/lib64/: ld-linux-x86-64.so.2
public/gn/: BUILDCONFIG.gn  copied_files_dir.gni  prebuilt.gni
public/gn/config/: standard.gni
public/gn/toolchain/: c_utils.gni  clang.gni  environment_redirect.gni  gcc.gni  toolchain_utils_action.sh
report/: 0_fuchsia系统构建.md  1_Zircon启动过程.md  zircon中的任务体系.md
system/core/bootsvc/: main.cc
system/core/devmgr/shared/: async-loop-owned-rpc-handler.h
system/dev/board/: BUILD.gn
system/dev/board/rpi3/: BUILD.gn
system/dev/misc/ktrace/: BUILD.gn
system/fidl/fuchsia-camera-test/: BUILD.gn
system/fidl/fuchsia-hardware-camera/: BUILD.gn
system/fidl/fuchsia-hardware-tee/: BUILD.gn
system/fidl/fuchsia-hardware-telephony-transport/: BUILD.gn
system/fidl/fuchsia-minfs/: BUILD.gn
system/public/zircon/boot/: driver-config.h  multiboot.h
system/uapp/midiecho/: BUILD.gn
system/uapp/run-vc/: BUILD.gn
system/ulib/zxtest/test/integration/: print_test.c
tools/banjo/: BUILD.gn
(+50 files in other folders)
